--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
     <link rel="canonical" href="https://akshantjain.com" />
-    <link rel="canonical" href="https://akshantjain.github.io" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -71,9 +70,7 @@
 
     <!-- Plugin JavaScript -->
     <!-- <script src="vendor/jquery-easing/jquery.easing.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"
-        integrity="sha256-H3cjtrm/ztDeuhCN9I4yh4iN2Ybx/y1RM7rMmAesA0k=" crossorigin="anonymous">
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" integrity="sha512-0QbL0ph8Tc8g5bLhfVzSqxe9GERORsKhIn1IrpxDAgUsbBGz/V7iSav2zzW325XGd1OMLdL4UiqRJj702IeqnQ==" crossorigin="anonymous"></script>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.2.9/firebase-app.js"></script>
