last version update

--- a/public/index.html
+++ b/public/index.html
@@ -78,5 +78,11 @@
     <script src="/__/firebase/8.2.9/firebase-analytics.js"></script>
 
     <script src="script.js"></script>
+
+    <script>
+    if (typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === 'object') {
+        __REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function() {};
+    }
+</script>
   </body>
 </html>
