--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="canonical" href="https://akshantjain.com" />
     <meta name="description"
-        content="Computer Science Student, Aspiring Software and Front End Developer">
+        content="Computer Science Student, Aspiring Software and Web Developer">
     <meta name="keywords" content="design, development, web, akshantjain, akshant, jain, software, student, senior, personal website, website, personal, info, example">
     <title>Akshant Jain | Developer</title>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -18,7 +18,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Roboto+Slab&family=Alegreya+Sans+SC:wght@400;500;600&family=Allerta+Stencil&family=Lato&family=Cookie&family=Mukta&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9e308de20c.js" crossorigin="anonymous"></script>
     <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
     <!--
@@ -49,5 +49,20 @@
     <script src="/__/firebase/8.2.9/firebase-app.js"></script>
 
     <script src="/__/firebase/8.2.9/firebase-analytics.js"></script>
+
+    <script src="sw.js"></script>
+        <script>
+            if ('serviceWorker' in navigator) {
+              window.addEventListener('load', function() {
+                navigator.serviceWorker.register('sw.js').then(function(registration) {
+                  // Registration was successful
+                  console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                }, function(err) {
+                  // registration failed :(
+                  console.log('ServiceWorker registration failed: ', err);
+                });
+              });
+            }
+        </script>
   </body>
 </html>
