--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Roboto+Slab&family=Alegreya+Sans+SC:wght@400;500;600&family=Allerta+Stencil&family=Cookie&family=Mukta&family=Paprika&family=Acme&display=swap" rel="stylesheet">
+    <link href="https://fonts.gstatic.com"> 
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link defer href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Roboto+Slab&family=Alegreya+Sans+SC:wght@400;500;600&family=Allerta+Stencil&family=Cookie&family=Mukta&family=Paprika&family=Acme&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9e308de20c.js" crossorigin="anonymous"></script>
     <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
     <!--
